<resources>
    <string name="app_name">TikTalk</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_1">Get to know someone</string>
    <string name="message_2">Log in now</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">log in</string>
    <string name="tv_sign_up">Don\'t have an account yet? Sign Up</string>
    <string name="message_3">Are you ready to talky-talk?</string>
    <string name="message_4">Sign up with us &lt;3 </string>
    <string name="name">Name</string>
    <string name="re_enter_password">Re-Enter Password</string>
    <string name="sign_up">sign up</string>
    <string name="tv_login">Already have an account?</string>
    <string name="add_friend">Add Friend</string>
    <string name="generate_qr_code">Generate your QR</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="logout">Log out</string>
    <string name="about_me">About Me</string>
    <string name="about">About</string>
    <string name="sample_about_user">Duis ultrices consequat tincidunt. Nulla ut magna imperdiet, luctus sem vel, molestie arcu.</string>
    <string name="sample_name">John Doe</string>
    <string name="note">Note</string>
    <string name="sample_note">Duis ultrices consequat tincidunt. Nulla ut magna imperdiet, luctus sem vel, molestie arcu.</string>
    <string name="edit">Edit Profile</string>
    <string name="confirm_edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="delete">Delete</string>
    <string name="no_friend_request">No Friend Requests</string>
    <string name="friend_requests">Friend Requests</string>>
    <string name="sample_name_2">Jane Doe</string>
    <string name="cancel_request">Cancel Request</string>
    <string name="type_a_message">Type your message</string>
    <string name="back">Back</string>
    <string name="friends_list">Friends List</string>
    <string name="search">Search</string>
    <string name="no_friends">No Friends</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="unfriend">Unfriend</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="password_message_2">Please enter your email to change your password:</string>
    <string name="sample_timestamp">00:00</string>
    <string name="change_pass_message_1">We have sent an email to the email address you provided.</string>
    <string name="change_pass_message_2">Please check your email to change your password.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="tv_forgot_password">Forgot Password?</string>
    <string name="forgot_pass_message_2">Please enter your email to change your password:</string>
    <string name="send_email">Send Email</string>
    <string name="no_current_Chats">No Current Chats</string>




</resources>