<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn = "navigation_view">

    <item
        android:id="@+id/nav_profile"
        android:title="@string/profile"
        android:icon="@drawable/baseline_person_24"/>
    <item
        android:id="@+id/nav_add_friend"
        android:title="@string/add_friend"
        android:icon="@drawable/baseline_person_add_alt_1_24"/>
    <item
        android:id="@+id/nav_qr_code"
        android:title="@string/generate_qr_code"
        android:icon="@drawable/baseline_qr_code_24"/>
    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@drawable/baseline_settings_24"/>


</menu>