<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue">

    <ImageView
        android:id="@+id/iv_app_name"
        android:layout_width="280dp"
        android:layout_height="200dp"
        android:src="@drawable/tiktalk_2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="350dp"/>


    <TextView
        android:id="@+id/tv_message_1"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_pass_message_1"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/beige"
        android:textSize="15dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_app_name"
        android:layout_marginTop="100dp"/>

    <TextView
        android:id="@+id/tv_message_2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:text="@string/change_pass_message_2"
        android:fontFamily="@font/montserrat_regular"
        android:textColor="@color/beige"
        android:textSize="15dp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_message_1"
        android:layout_marginTop="20dp"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_changePassword"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_button"
        android:text="@string/done"
        android:textColor="@color/beige"
        android:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>




</androidx.constraintlayout.widget.ConstraintLayout>