<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:layout_gravity="center_horizontal"
    android:padding="10dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_users_img"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/sample_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/tv_username"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:text="@string/sample_name"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/beige"
            android:fontFamily="@font/montserrat_regular"
            app:layout_constraintStart_toEndOf="@id/iv_users_img"
            app:layout_constraintTop_toTopOf="parent"/>

        <TextView
            android:id="@+id/tv_preview_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:text="@string/sample_note"
            android:maxWidth="200dp"
            android:maxHeight="15dp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/gray"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toEndOf="@id/iv_users_img"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"/>

        <TextView
            android:id="@+id/tv_timestamp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="10sp"
            android:text="@string/sample_timestamp"
            android:fontFamily="@font/montserrat_regular"
            android:textColor="@color/gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="25dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>