<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/iv_friend_profile"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/sample_img"
        app:tint="@color/white"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:elevation="10dp"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="match_parent"
        android:layout_height="190dp"
        app:cardBackgroundColor="@color/scarlet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_2"
        android:layout_width="210dp"
        android:layout_height="210dp"
        android:layout_marginTop="45dp"
        app:cardCornerRadius="180dp"
        app:cardBackgroundColor="@color/scarlet"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_friend_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sample_name_2"
        android:fontFamily="@font/montserrat_bold"
        android:textColor="@color/beige"
        android:textSize="25sp"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cv_2"
        android:layout_marginTop="20dp"/>

    <androidx.cardview.widget.CardView
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardCornerRadius="10dp"
        app:layout_constraintTop_toBottomOf="@id/cv_1"
        android:layout_marginTop="140dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="30dp">

            <TextView
                android:id="@+id/tv_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_me"
                android:textColor="@color/beige"
                android:textAllCaps="true"
                android:fontFamily="@font/montserrat_semibold"
                android:textSize="15sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_about_me"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sample_about_user"
                android:textColor="@color/beige_2"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:fontFamily="@font/montserrat_regular"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_1" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_friend"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/add_friend"
        android:elevation="20dp"
        android:textColor="@color/beige"
        android:textSize="18sp"
        android:fontFamily="@font/montserrat_semibold"
        android:textAllCaps="false"
        android:background="@drawable/bg_button_add_friend"
        app:layout_constraintTop_toBottomOf="@id/cv_2"
        android:layout_marginTop="350dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel_request"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/bg_button_cancel_request"
        android:elevation="20dp"
        android:fontFamily="@font/montserrat_semibold"
        android:text="@string/cancel_request"
        android:textAllCaps="false"
        android:textColor="@color/beige"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>