<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark_blue">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:src="@drawable/tiktalk_4"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="30dp"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_1"
        android:layout_width="match_parent"
        android:layout_height="800dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        android:backgroundTint="@color/beige"
        app:cardCornerRadius="70dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_message_1"
                android:layout_width="350dp"
                android:gravity="center"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/montserrat_bold"
                android:textColor="@color/dark_blue"
                android:text="@string/tv_forgot_password"
                android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_1"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:src="@drawable/outline_lock_person_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message_1"
                android:layout_marginTop="60dp"/>

            <TextView
                android:id="@+id/tv_message_2"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:text="@string/forgot_pass_message_2"
                android:textSize="17sp"
                android:textColor="@color/dark_blue"
                android:fontFamily="@font/montserrat_semibold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_1"
                android:layout_marginTop="30dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_email"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="30dp"
                android:hint="@string/email"
                app:boxStrokeColor="@color/scarlet"
                app:errorEnabled="true"
                app:hintTextColor="@color/dark_blue"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_message_2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_send_email"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_button"
                android:text="@string/send_email"
                android:textColor="@color/beige"
                android:fontFamily="@font/montserrat_semibold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="225dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:textSize="12sp"
                android:background="@drawable/bg_transparent_button"
                android:layout_marginTop="350dp"
                android:textColor="@color/dark_gray"
                android:fontFamily="@font/montserrat_bold"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="170dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>